@@ -1,3 +1,8 @@
+2004-03-15  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b117
+
+	* Change: Turn album sort routines into actual functions instead of 
+	  building them as strings and using create_function()
+
 2004-03-15 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b116
 
 	* Bugfix: getBrowserlanguage() didnt work.
